--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
+    margin: 0;
 }
 
 /*
@@ -522,14 +523,13 @@ html {
   position: absolute;
   top: 0;
   z-index: 100;
-  margin-left: -6;
 }
 
 .product-slides {
     list-style-type: none;
     padding: 0 15px 0 15px;
     margin: 0;
-    margin-top: 7px;
+    margin-top: 10px;
 }
 
 .product-slides li {
@@ -586,7 +586,7 @@ html {
   font-size: 0.9em;
 }
 .interiors {
-   width: 848px;
+   width: 803px;
   height: 454px;
   position: relative;
   overflow: hidden;
@@ -723,8 +723,8 @@ html {
 }
 
 .interiors img {
-  margin-top:39px !important;
-  width:793px;
+  margin-top:40px !important;
+  width:806px;
 
 }
 
